--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Everything Presence One</title>
+    <title>Everything Presence One - Custom CO2 and VOC sensors added</title>
     <meta
       name="description"
       content="Web installer for the Everything Presence One board."
